--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
       <meta charset="UTF-8">
       <meta name="Viewport" content="width=device-width,initial-scale=1.0">
-      <title>Jenna Anderson</title>
+      <title>Jenna Anderson | WDD 130</title>
     </head>
     <body>
         <header>
