--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         </header>
         <main>
             <h1>Jenna Anderson | WDD 130</h1>
-            <img src="images/profile.jpg" alt="Jenna Anderson">
+            <img src="images/profile.jpg" alt="Jenna Anderson" width="200">
             <p>Hi! My name is Jenna Anderson. I have been married to my wonderful 
                 husband, Gjori, for a little over as year, and I am loving the married 
                 life! I have a pet ball python named Bean and a daper little cat name Nyx.
