--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
     <head>
       <meta charset="UTF-8">
-      <meta name="Viewport" content="width=device-width,initial-scale=1.0">
+      <meta name="viewport" content="width=device-width,initial-scale=1.0">
       <title>Jenna Anderson | WDD 130</title>
     </head>
     <body>
