--- a/week02/holygrail.html
+++ b/week02/holygrail.html
@@ -31,7 +31,7 @@
         </main>
         <aside>
             <img src = "https://content.churchofjesuschrist.org/templesldsorg/bc/Temples/photo-galleries/snowflake-arizona/320x200/snowflake-temple-lds-1078595-wallpaper.jpg" alt = "The Snowflake Temple" width = "200">
-
+            <figcaption>The Snowflake, AZ Temple</figcaption>
         </aside>
         <footer>
             Jenna Anderson
