aside and footer css

--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en-US">
     <head>
-      <link rel="stylesheet" href="styles/styles.css">
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width,initial-scale=1.0">
       <title>Jenna Anderson | WDD 130</title>
+      <meta name="description" content="Jenna Anderson, WDD 130, Main Assignment Page, Basic html.">
+      <meta name="author" content="Jenna Anderson">
+      <link rel="stylesheet" href="styles/styles.css">
     </head>
     <body>
         <header>
@@ -21,6 +23,15 @@
                 life! I have a pet ball python named Bean and a daper little cat name Nyx.
                 Im really excited for this course and have been enjoying it a lot already!</p>
         </main>
+        <aside>
+          <h2>Idaho</h2>
+          <img src="images/tetons.jpg" alt="The Teton Mountains" width="200">
+          <p>
+            Idaho is a quiet state, that is covered in miles and miles of fields. If you ever get a chance
+            to fly over this great state it looks like a patch work quilt. Truly beautiful. It can 
+            get very cold especially in Rexburg, which is the city I am living in, but I dont mind that too much.
+          </p>
+        </aside>
         <footer>
            <p>&copy;2024-Jenna Anderson-Idaho,USA</p> 
         </footer>
