--- a/week03/wireframe.html
+++ b/week03/wireframe.html
@@ -19,7 +19,7 @@
        </nav>
     </header>
     <main>
-        <div>
+        <div class = "slider sections">
             <section>
                 <img scr="" alt="" width="100%">
                 <h2>sub heading</h2>
@@ -42,7 +42,7 @@
             </section>
              
         </div>
-        <div>
+        <div class = "product gallery">
             
             <figure>
                 <img src="https://placeimg.com/75/75/animals" alt="" width="">
