--- a/wwr/about.html
+++ b/wwr/about.html
@@ -16,13 +16,16 @@
 </head>
 <body>
     <header>
-        <img src="images/rafting-logo.png" alt="Dry Oar logo">
-        <nav>
-            <a href="../index.html">Home</a>
-            <a href="about.html">About Us</a>
-            <a href="trips.html">Trips</a>
-            <a href="contact.html">Contact Us</a>
-        </nav>
+        <div class="header-container">
+            <img class ="headerimg" src="images/rafting-logo.png" alt="Dry Oar logo">
+            <nav class = "header-nav">
+                <a class= "nav-link" href="../index.html">Home</a>
+                <a class= "nav-link" href="about.html">About Us</a>
+                <a class= "nav-link" href="trips.html">Trips</a>
+                <a class= "nav-link" href="contact.html">Contact Us</a>
+            </nav>
+        </div>
+        
     </header>
     <main>
         <div class="hero">
@@ -36,24 +39,32 @@
             </article>
             <img src="images/hero-image-optimized.jpg" alt="White water rafting adventure" width="100%" height="auto"> 
         </div>
-        <section>
+        <section class = "history-container">
             <h2>History</h2>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Id, dolores vitae. 
                 In dolorum voluptatibus, neque beatae doloribus saepe excepturi perspiciatis eum? 
+                Quidem illo laudantium magnam!Lorem ipsum, dolor sit amet consectetur adipisicing elit. Id, dolores vitae. 
+                In dolorum voluptatibus, neque beatae doloribus saepe excepturi perspiciatis eum? 
+                Quidem illo laudantium magnam!</p>
+            <img class="history-img"  src="images/rafting-5.jpg" alt="Exciting adventure on the river with a group">
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Id, dolores vitae. 
+                In dolorum voluptatibus, neque beatae doloribus saepe excepturi perspiciatis eum? 
+                Quidem illo laudantium magnam!Lorem ipsum, dolor sit amet consectetur adipisicing elit. Id, dolores vitae. 
+                In dolorum voluptatibus, neque beatae doloribus saepe excepturi perspiciatis eum? 
                 Quidem illo laudantium magnam!</p>
         </section>
-        <section>
+        <section class="adventure-container">
             <h2>Adventure Awaits You</h2>
-            <img src="images/rafting-1.jpg" alt="Rafting on a river with rapids" width="300" height="auto">
-            <img src="images/rafting-2.jpg" alt="Rafting through challenging rapids"width="300" height="auto">
-            <img src="images/rafting-3.jpg" alt="Thrilling white water rafting experience"width="300" height="auto">
-            <img src="images/rafting-4.jpg" alt="Rafting team navigating river rapids"width="300" height="auto">
-            <img src="images/rafting-5.jpg" alt="Exciting adventure on the river with a group"width="300" height="auto">
+            <img class="adventure-imgs img1" src="images/rafting-1.jpg" alt="Rafting on a river with rapids" >
+            <img class="adventure-imgs img2" src="images/rafting-2.jpg" alt="Rafting through challenging rapids">
+            <img class="adventure-imgs img3" src="images/rafting-3.jpg" alt="Thrilling white water rafting experience">
+            <img class="adventure-imgs img4" src="images/rafting-4.jpg" alt="Rafting team navigating river rapids">
+            <img class="adventure-imgs img5" src="images/rafting-5.jpg" alt="Exciting adventure on the river with a group">
         </section>
     </main>
-    <footer>
+    <footer class="footer-container">
         <p>&copy;2024 Dry Oar - Jenna Anderson</p>
-        <nav>
+        <nav class="nav-container">
             <a href="https://facebook.com">
                 <img src="images/facebook-icon.webp" alt="Facebook">
             </a>
