--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -77,7 +77,7 @@
             <div class="info">
                 <label class="name" for="fullname">Full Name:</label>
                 <input class="name2" type="text" id="fullname" name="user-contact">
-                <label class="email" or="email">Email:</label>
+                <label class="email" for="email">Email:</label>
                 <input class="email2" type="text" id="email" name="user-contact">
             </div>
             <div class="message">
