removing unused classes

--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -37,14 +37,14 @@
                     <p>1234 Fiction St NW Imaginary, LD 55555</p>
                 </article>  
             </section>
-            <section calss="numbers">
-                <h2 class="numberh2">Numbers:</h2>
+            <section>
+                <h2>Numbers:</h2>
                 <article>
                     <p>(555)-555-555</p>
                     <p>(999)-999-999</p>
                     <p>(222)-222-222</p>
                 </article>
-                <h2 class="emailh2">Email:</h2>
+                <h2>Email:</h2>
                 <p>dryoar@example.com</p>
             </section>
             <section class="maps">
