--- a/wwr/about.html
+++ b/wwr/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dry Oar</title>
+    <title>Dry Oar-About Us</title>
     <meta name="description" content="white water rafting, jenna anderson, WDD 130, river, adventure, fun, water, sun, family friendly, summer, activities">
     <meta name="author" content="Jenna Anderson"> 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -19,7 +19,7 @@
         <div class="header-container">
             <img class ="headerimg" src="images/rafting-logo.png" alt="Dry Oar logo">
             <nav class = "header-nav">
-                <a class= "nav-link" href="../index.html">Home</a>
+                <a class= "nav-link" href="index.html">Home</a>
                 <a class= "nav-link" href="about.html">About Us</a>
                 <a class= "nav-link" href="trips.html">Trips</a>
                 <a class= "nav-link" href="contact.html">Contact Us</a>
