--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact Us</title>
-    <meta name="description" content="white water rafting, jenna anderson, WDD 130, contact us, html forms, basic css, basic html">
+    <title>Dry Oar|Contact Us</title>
+    <meta name="description" content="week five, jenna anderson, WDD 130, contact us, html forms, basic css, basic html">
     <meta name="author" content="Jenna Anderson"> 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
