--- a/wwr/index.html
+++ b/wwr/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dry Oar</title>
+    <title>Dry Oar|Home</title>
     <meta name="description" content="white water rafting, jenna anderson, WDD 130, river, adventure, home page4, basic html, basic css">
     <meta name="author" content="Jenna Anderson"> 
     <link rel="preconnect" href="https://fonts.googleapis.com">
