update link and html set up

--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -19,7 +19,7 @@
         <div class="header-container">
             <img class ="headerimg" src="images/rafting-logo.png" alt="Dry Oar logo">
             <nav class = "header-nav">
-                <a class= "nav-link" href="../index.html">Home</a>
+                <a class= "nav-link" href="index.html">Home</a>
                 <a class= "nav-link" href="about.html">About Us</a>
                 <a class= "nav-link" href="trips.html">Trips</a>
                 <a class= "nav-link" href="contact.html">Contact Us</a>
