--- a/wwr/index.html
+++ b/wwr/index.html
@@ -81,6 +81,7 @@
                 deleniti facilis eligendi enim pariatur voluptatibus nesciunt, 
                 reprehenderit Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                 Inventore quasi ad sed eos quidem aliquid, minima obcaecati numquam ex tenetur?</p>
+            <a href="trips.html">Click here to get started!</a>
             <img scr="" alt="waterfall">
             <img scr="" alt="river">
         </div>
