syntax errors fix

--- a/wwr/index.html
+++ b/wwr/index.html
@@ -82,8 +82,8 @@
                 reprehenderit Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                 Inventore quasi ad sed eos quidem aliquid, minima obcaecati numquam ex tenetur?</p>
             <a href="trips.html">Click here to get started!</a>
-            <img scr="" alt="waterfall">
-            <img scr="" alt="river">
+            <img src="" alt="waterfall">
+            <img src="" alt="river">
         </div>
     </main>
     <footer class="footer-container">
