home page complete

--- a/wwr/index.html
+++ b/wwr/index.html
@@ -46,10 +46,10 @@
         </div>    
         <div class="newsletter">
             <article class="letter">
-                <h1>Weekly Newsletter</h1>
+                <h1 class="letterh1" >Weekly Newsletter</h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium, nulla dolor! Aliquid mollitia eos corrupti soluta 
-                    eligendi ipsum, totam quos quisquam nostrum repellendus nam sit esse suscipit itaque nesciunt. Consequatur quis id cum 
-                    sequi dolorem velit ad deserunt, provident tempora nobis libero, atque eveniet numquam possimus dicta eos tempore perferendis 
+                    eligendi ipsum, totam quos quisquam nostrum repellendus nam sit esse suscipit itaque nesciunt. 
+                    Consequatur quis id cum sequi dolorem velit ad deserunt, provident tempora nobis libero, atque eveniet numquam possimus dicta eos tempore perferendis 
                     asperiores dolorum voluptatibus et maxime excepturi, minima pariatur. Ea maiores provident ad praesentium doloribus 
                     inventore molestiae architecto, reprehenderit rerum natus officia explicabo. Cum, pariatur excepturi enim officia placeat 
                     sed itaque magni neque fugit aut in eum culpa modi dignissimos? Possimus vel similique eaque consequuntur, adipisci molestias 
@@ -64,26 +64,28 @@
                     eum harum atque quas!
                 </p>
             </article>
-            <article class="form">
+            <article class="newsletterform">
                 <h1>News Letter Sign Up</h1>
                 <label for="name">Full Name:</label>
-                <input type="text" id="name" name="name">
+                <input class="textinput" type="text" id="name" name="name">
                 <label for="email">Email:</label>
-                <input type="text" id="email" name="email">
-                <label for="coupons">I would like to receive monthly coupons as well!</label>
-                <input type="checkbox" id="coupons" name="coupons">
+                <input class="textinput" type="text" id="email" name="email">
+                <div class="checkbox">
+                    <label for="coupons">I would like to receive monthly coupons as well!</label>
+                    <input type="checkbox" id="coupons" name="coupons">
+                </div>
                 <button type="submit">Submit</button>
             </article> 
         </div>
         <div class="tripplan">
-            <h1>Plan your next trip!</h1>
+            <h1 class="planh1">Plan your next trip!</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur quis earum 
                 deleniti facilis eligendi enim pariatur voluptatibus nesciunt, 
                 reprehenderit Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                 Inventore quasi ad sed eos quidem aliquid, minima obcaecati numquam ex tenetur?</p>
+            <img class="img1" src="../images/colorado-river-img.jpg" alt="waterfall" >
+            <img class="img2" src="../images/az-river-img.jpg" alt="river" >
             <a href="trips.html">Click here to get started!</a>
-            <img src="" alt="waterfall">
-            <img src="" alt="river">
         </div>
     </main>
     <footer class="footer-container">
