--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -31,11 +31,11 @@
         <div>
             <div class="upcomingtrips">
                 <h1>Upcoming Trips</h1>
-                <img src="" alt="Water Fall">
+                <img src="../images/colorado-river-img.jpg" alt="Water Fall">
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem ipsum fugiat blanditiis impedit dolore harum?</p>
-                <img src="" alt="river">
+                <img src="../images/az-river-img.jpg" alt="river">
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem ipsum fugiat blanditiis impedit dolore harum?</p>
-                <img src="" alt="river">
+                <img src="../images/if-snakeriver-img.jpg" alt="river">
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem ipsum fugiat blanditiis impedit dolore harum?</p>
                 <a href="contact.html">Click here to contact us about making a reservation!</a>
                </div>
