pages are complete

--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -30,31 +30,30 @@
     <main>
         <div>
             <div class="upcomingtrips">
-                <h1>Upcoming Trips</h1>
-                <img src="../images/colorado-river-img.jpg" alt="Water Fall">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem ipsum fugiat blanditiis impedit dolore harum?</p>
-                <img src="../images/az-river-img.jpg" alt="river">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem ipsum fugiat blanditiis impedit dolore harum?</p>
-                <img src="../images/if-snakeriver-img.jpg" alt="river">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem ipsum fugiat blanditiis impedit dolore harum?</p>
-                <a href="contact.html">Click here to contact us about making a reservation!</a>
+                <div class="nowtrips">
+                    <h1>Upcoming Trips</h1>
+                    <img class="coimg" src="../images/colorado-river-img.jpg" alt="Water Fall">
+                    <p class="cop">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem ipsum fugiat blanditiis impedit dolore harum?</p>
+                    <img class="azimg" src="../images/az-river-img.jpg" alt="river">
+                    <p class="azp">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem ipsum fugiat blanditiis impedit dolore harum?</p>
+                    <img class="ifimg" src="../images/if-snakeriver-img.jpg" alt="river">
+                    <p class="ifp">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem ipsum fugiat blanditiis impedit dolore harum?</p>
+                    <a href="contact.html">Click here to contact us about making a reservation!</a>
                </div>
-               <div>
-                <h1>Future Trips</h1>
-                <div class="table">
-                    <h2>Dates:</h2>
-                    <p>01/25/2025</p>
-                    <p>03/25/2025</p>
-                    <p>05/25/2025</p>
-                    <h2>Places:</h2>
-                    <p>Canon City, Colorado</p>
-                    <p>Mesa, Arizona</p>
-                    <p>Idaho Falls, Idaho</p>
-                    <h2>Details:</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores, eligendi.</p>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quam, quo.</p>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deleniti, officia.</p>
-                </div>
+               <div class="table">
+                    <h1>Future Trips</h1>
+                    <h2 class="h21">Dates:</h2>
+                    <p class="date1">01/25/2025</p>
+                    <p class="date2">03/25/2025</p>
+                    <p class="date3">05/25/2025</p>
+                    <h2 class="h22">Places:</h2>
+                    <p class="place1">Canon City, Colorado</p>
+                    <p class="place2">Mesa, Arizona</p>
+                    <p class="place3">Idaho Falls, Idaho</p>
+                    <h2 class="h23">Details:</h2>
+                    <p calss="details1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores, eligendi.</p>
+                    <p class="details2">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quam, quo.</p>
+                    <p class="details3">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deleniti, officia.</p>
             </div>
         </div>
     </main>
@@ -70,6 +69,7 @@
             <a href="https://instagram.com">
                 <img src="images/instagram-icon.webp" alt="Instagram">
             </a>
+            <a href="../images/trips-page-wireframe.JPG">Trips wire frame</a>
         </nav>
     </footer>
 </body>
